feat(npc): Adicionado serviço de skin via URL e player.